--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.23.1",
+    "remark-gfm": "^4.0.0",
+    "remark-github": "^12.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
