--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
       "<rootDir>/jest.setup.ts"
     ],
     "collectCoverageFrom": [
-      "<rootDir>/src/**/*.{js,ts,jsx,tsx}"
+      "<rootDir>/src/components/**/*.{js,ts,jsx,tsx}"
     ]
   }
 }
